--- a/src/global.css
+++ b/src/global.css
@@ -31,7 +31,8 @@ body {
 /* Change the width of the scrollbar */
 ::-webkit-scrollbar {
 	z-index: 50;
-	width: 7px;
+	width: 3px;
+	height: 2px;
 }
 
 /* Hide the scrollbar when not hovering */
@@ -41,7 +42,8 @@ body {
 
 /* Style the scrollbar for Firefox */
 scrollbar {
-	width: 10px;
+	width: 3px;
+	height: 2px;
 	background-color: #f5f5f5;
 }
 
