projects + footer + theme

--- a/src/global.css
+++ b/src/global.css
@@ -4,7 +4,7 @@
 :root {
 	/* colors */
 
-	--lofi-bg-color: #ffff;
+	--corporate-bg-color: #ffff;
 	--halloween-bg-color: #212121;
 	--food-bg-color: rgb(94, 163, 236);
 	--music-bg-color: rgb(246, 68, 68);
